HelloDynamic.java fails with latest Graal

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 14
    • Affects Version/s: 14
    • Component/s: hotspot
    • b20

      If I update JDK with the latest Graal, I get this crash, and it is reproducible:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error[0.382s][info][class,load] java.util.concurrent.ConcurrentHashMap$CollectionView source: shared objects file
       (open/src/hotspot/share/oops/instanceKlass.cpp:3610), pid=15270, tid=15283
      # guarantee(length == methods()->length()) failed: invalid method ordering length
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0) (fastdebug build 14-internal+0-2019-10-04-1908127.dean.long.dev0)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-internal+0-2019-10-04-1908127.dean.long.dev0, mixed mode, sharing, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xdd4c74] InstanceKlass::verify_on(outputStream*)+0x844

            Assignee:
            Calvin Cheung (Inactive)
            Reporter:
            Dean Long
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: