8232030: HelloDynamic.java fails with latest Graal

Include the dynamic dumping condition when setting up the merged_ordering array in merge_in_new_methods() of defaultMethods.cpp.

Reviewed-by: iklam, coleenp